// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderSummary stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > EmptyBasket story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    0 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £0.00
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-primary font-medium"
              >
                FREE
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span>
                £0.00
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £0.00
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > EstimateMode story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Estimated Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > ItemsExpanded story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="open"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="open"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="true"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="open"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="open"
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
              >
                <div
                  class="px-0 py-4"
                >
                  <div
                    class="space-y-5"
                  >
                    <div
                      class="space-y-5"
                    >
                      <div
                        class="border-b border-muted-foreground/10 last:border-b-0"
                      >
                        <div
                          class="grid md:grid-cols-[112px_1fr] grid-cols-[72px_1fr] gap-4"
                          data-testid="sf-product-item-summary-029407331227M"
                        >
                          <div
                            class="flex items-center justify-center"
                          >
                            <div
                              class="bg-muted rounded-none flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden w-16"
                            >
                              <img
                                alt="Solid Silk Tie, Navy, small"
                                class="h-full w-full object-contain"
                                src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw7832203a/images/small/PG.949432114S.NAVYSI.PZ.webp?sfrm=jpg&q=70"
                              />
                            </div>
                          </div>
                          <div
                            class="flex-1 space-y-1 min-w-0"
                          >
                            <div
                              class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                            >
                              <h2
                                class="tracking-tight text-left text-sm md:text-base font-medium min-w-0 flex-1 leading-tight"
                              >
                                <a
                                  class="text-foreground hover:text-primary block break-words"
                                  href="/RefArchGlobal/en-GB/product/25752218M"
                                  title="Solid Silk Tie"
                                >
                                  Solid Silk Tie
                                </a>
                              </h2>
                            </div>
                            <div>
                              <div
                                class="text-xs text-muted-foreground"
                              >
                                Qty:
                                 
                                2
                              </div>
                              <div
                                class="text-xs text-muted-foreground space-y-1 mb-1"
                              >
                                <div>
                                  Color
                                  : 
                                  Navy
                                </div>
                              </div>
                              <span
                                class="inline-flex items-center justify-center px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 bg-muted text-foreground border-0 text-xs font-medium rounded-none"
                                data-slot="badge"
                              >
                                Saved £40.62
                              </span>
                            </div>
                            <div
                              class="items-center gap-2 text-sm"
                            >
                              <span
                                aria-label="Current price: £19.19"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                              >
                                £19.19
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Solid Silk Tie
                                 
                                Current price: £19.19
                              </span>
                               
                              <span
                                aria-label="List price: £39.50"
                                class="font-medium line-through text-muted-foreground text-right text-sm leading-none relative"
                              >
                                £39.50
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Solid Silk Tie
                                 
                                List price: £39.50
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="border-b border-muted-foreground/10 last:border-b-0"
                      >
                        <div
                          class="grid md:grid-cols-[112px_1fr] grid-cols-[72px_1fr] gap-4"
                          data-testid="sf-product-item-summary-701643477180M"
                        >
                          <div
                            class="flex items-center justify-center"
                          >
                            <div
                              class="bg-muted rounded-none flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden w-16"
                            >
                              <img
                                alt="Floral Ruffle Top, Cardinal Red Multi, small"
                                class="h-full w-full object-contain"
                                src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw42fb2bdf/images/small/PG.10240939.JJ9DFXX.PZ.webp?sfrm=jpg&q=70"
                              />
                            </div>
                          </div>
                          <div
                            class="flex-1 space-y-1 min-w-0"
                          >
                            <div
                              class="mb-2 md:mb-4 flex items-start gap-2 min-w-0"
                            >
                              <h2
                                class="tracking-tight text-left text-sm md:text-base font-medium min-w-0 flex-1 leading-tight"
                              >
                                <a
                                  class="text-foreground hover:text-primary block break-words"
                                  href="/RefArchGlobal/en-GB/product/25591227M"
                                  title="Floral Ruffle Top"
                                >
                                  Floral Ruffle Top
                                </a>
                              </h2>
                            </div>
                            <div>
                              <div
                                class="text-xs text-muted-foreground"
                              >
                                Qty:
                                 
                                1
                              </div>
                              <div
                                class="text-xs text-muted-foreground space-y-1 mb-1"
                              >
                                <div>
                                  Color
                                  : 
                                  Cardinal Red Multi
                                </div>
                                <div>
                                  Size
                                  : 
                                  M
                                </div>
                              </div>
                              <span
                                class="inline-flex items-center justify-center px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 bg-muted text-foreground border-0 text-xs font-medium rounded-none"
                                data-slot="badge"
                              >
                                Saved £43.81
                              </span>
                            </div>
                            <div
                              class="items-center gap-2 text-sm"
                            >
                              <span
                                aria-label="Current price: £35.19"
                                aria-live="polite"
                                class="[&:not(:first-child)]:mt-6 text-card-foreground text-right font-semibold text-sm leading-none relative"
                              >
                                £35.19
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Floral Ruffle Top
                                 
                                Current price: £35.19
                              </span>
                               
                              <span
                                aria-label="List price: £79.00"
                                class="font-medium line-through text-muted-foreground text-right text-sm leading-none relative"
                              >
                                £79.00
                              </span>
                              <span
                                aria-atomic="true"
                                aria-live="polite"
                                class="sr-only"
                              >
                                Floral Ruffle Top
                                 
                                List price: £79.00
                              </span>
                            </div>
                            <div
                              class="items-center gap-2 text-sm"
                            >
                              <span
                                class="line-clamp-2 text-[inherit] font-medium"
                              >
                                Buy one Long Center Seam Skirt and get 2 tops
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <a
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary underline-offset-4 hover:underline h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-center"
                      href="/RefArchGlobal/en-GB/cart"
                    >
                      Edit cart
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > Minimal story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > MobileCollapsible story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="last:border-b-0 border-b-0"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="closed"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-«x»"
          aria-expanded="false"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 px-[var(--cart-summary-px)] py-4 hover:no-underline"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="closed"
          id="radix-«x»"
          type="button"
        >
          <span
            class="flex-1 text-left text-sm font-semibold text-primary"
          >
            Estimated Total (
            3
             items)
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-«x»"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="closed"
        hidden=""
        id="radix-«x»"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > MobileExpanded story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
    data-orientation="vertical"
    data-slot="accordion"
  >
    <div
      class="last:border-b-0 border-b-0"
      data-orientation="vertical"
      data-slot="accordion-item"
      data-state="open"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-«x»"
          aria-expanded="true"
          class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md text-left text-sm font-medium transition-all outline-none focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 px-[var(--cart-summary-px)] py-4 hover:no-underline"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-slot="accordion-trigger"
          data-state="open"
          id="radix-«x»"
          type="button"
        >
          <span
            class="flex-1 text-left text-sm font-semibold text-primary"
          >
            Estimated Total (
            3
             items)
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-«x»"
        class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
        data-orientation="vertical"
        data-slot="accordion-content"
        data-state="open"
        id="radix-«x»"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
      >
        <div
          class="p-0"
        >
          <div
            class="bg-card text-card-foreground flex flex-col gap-6 border py-6 border-none !py-0 [--cart-summary-px:1rem] rounded-none shadow-none"
            data-slot="card"
          >
            <div
              class="px-[var(--cart-summary-px)]"
              data-slot="card-content"
            >
              <div
                class="space-y-4"
                data-testid="sf-order-summary"
              >
                <div
                  aria-label="Order Summary"
                  class="space-y-2"
                  role="region"
                >
                  <div
                    class="space-y-2 text-sm"
                  >
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Subtotal
                      </span>
                      <span>
                        £73.57
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span>
                          Shipping
                        </span>
                      </div>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span>
                        Tax
                      </span>
                      <span
                        class="text-muted-foreground"
                      >
                        TBD
                      </span>
                    </div>
                    <div
                      class="flex justify-between items-center"
                    >
                      <span
                        class="font-bold"
                      >
                        Estimated Total
                      </span>
                      <span
                        class="font-bold"
                      >
                        £73.57
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > WithAppliedPromotions story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                20% Off Discount
              </span>
              <span
                class="text-success text-xs font-semibold"
              >
                -£59.99
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
          <hr
            class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
          />
          <div
            class="flex w-full flex-col gap-2 pt-2 pb-4"
          >
            <div
              class="mb-0"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class="border-b last:border-b-0"
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="open"
              >
                <h3
                  class="flex"
                  data-orientation="vertical"
                  data-state="open"
                >
                  <button
                    aria-controls="radix-«x»"
                    aria-expanded="true"
                    class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="open"
                    id="radix-«x»"
                    type="button"
                  >
                    <span
                      class="text-left text-sm font-medium text-primary"
                    >
                      Enter a Promotion Code
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-«x»"
                  class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="open"
                  id="radix-«x»"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
                >
                  <div
                    class="px-0 pt-2 pb-0"
                  >
                    <form
                      data-testid="promo-code-form"
                    >
                      <div
                        class="space-y-2"
                      >
                        <div
                          class="grid gap-2"
                          data-slot="form-item"
                        >
                          <label
                            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                            data-error="false"
                            data-slot="form-label"
                            for="_r_b_-form-item"
                          >
                            Promo code
                          </label>
                          <div
                            class="flex gap-2"
                          >
                            <input
                              aria-describedby="_r_b_-form-item-description"
                              aria-invalid="false"
                              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-none focus-visible:ring-0"
                              data-slot="form-control"
                              id="_r_b_-form-item"
                              name="code"
                              placeholder="Promo code..."
                              value=""
                            />
                            <button
                              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 rounded-none cursor-pointer px-4"
                              data-size="default"
                              data-slot="button"
                              data-variant="secondary"
                              type="submit"
                            >
                              Apply
                            </button>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="space-y-1"
            >
              <div
                class="flex items-center justify-between py-1"
              >
                <span
                  class="inline-flex items-center justify-center border px-2 py-0.5 w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 gap-1 rounded-none text-xs font-semibold"
                  data-slot="badge"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-check size-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                  SAVE20
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-x size-3 cursor-pointer"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6 6 18"
                    />
                    <path
                      d="m6 6 12 12"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > WithItemLevelPromotions story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £58.29
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                $10 Off Ties
              </span>
              <span
                class="text-success text-xs font-semibold"
              >
                -£10.00
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                15% Off Tops
              </span>
              <span
                class="text-success text-xs font-semibold"
              >
                -£5.28
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £58.29
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > WithPromoCodeForm story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
          <hr
            class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
          />
          <div
            class="flex w-full flex-col gap-2 pt-2 pb-4"
          >
            <div
              class="mb-0"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class="border-b last:border-b-0"
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="open"
              >
                <h3
                  class="flex"
                  data-orientation="vertical"
                  data-state="open"
                >
                  <button
                    aria-controls="radix-«x»"
                    aria-expanded="true"
                    class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start rounded-md py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="open"
                    id="radix-«x»"
                    type="button"
                  >
                    <span
                      class="text-left text-sm font-medium text-primary"
                    >
                      Enter a Promotion Code
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-«x»"
                  class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="open"
                  id="radix-«x»"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
                >
                  <div
                    class="px-0 pt-2 pb-0"
                  >
                    <form
                      data-testid="promo-code-form"
                    >
                      <div
                        class="space-y-2"
                      >
                        <div
                          class="grid gap-2"
                          data-slot="form-item"
                        >
                          <label
                            class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                            data-error="false"
                            data-slot="form-label"
                            for="_r_6_-form-item"
                          >
                            Promo code
                          </label>
                          <div
                            class="flex gap-2"
                          >
                            <input
                              aria-describedby="_r_6_-form-item-description"
                              aria-invalid="false"
                              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-none focus-visible:ring-0"
                              data-slot="form-control"
                              id="_r_6_-form-item"
                              name="code"
                              placeholder="Promo code..."
                              value=""
                            />
                            <button
                              class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 rounded-none cursor-pointer px-4"
                              data-size="default"
                              data-slot="button"
                              data-variant="secondary"
                              type="submit"
                            >
                              Apply
                            </button>
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > WithoutCartItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <h2
          class="tracking-tight text-left text-base font-semibold text-foreground"
          id="order-summary-heading-desktop"
        >
          Order Summary
        </h2>
        <hr
          class="mx-[calc(var(--cart-summary-px)*-1)] border-border"
        />
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderSummary stories snapshot > WithoutHeading story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border py-6 !py-4 rounded-none shadow-none"
    data-slot="card"
  >
    <div
      class="px-[var(--cart-summary-px)]"
      data-slot="card-content"
    >
      <div
        class="space-y-4"
        data-testid="sf-order-summary"
      >
        <div
          aria-label="Order Summary"
          class="space-y-2"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-«x»"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-«x»"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-sm text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-«x»"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-«x»"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-2 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                £73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Total
              </span>
              <span
                class="font-bold"
              >
                £73.57
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
